Added swagger config for lismascotas. Improved lismascotas error handling.
